--- a/index.html
+++ b/index.html
@@ -138,21 +138,30 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project2.jpg" />
+                        <img src="images/proj-prosail.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>PROSAIL-Net: A Transfer Learning DNN for Corn Biophysical Traits</h3>
                         <p>
-                          Generate a transfer learning-based PROSAIL inversion technique that
-                          estimates different plant phenotypes/traits from <strong>push-broom hyperspectral</strong> and
-                          <strong>LiDAR</strong> in UAV platforms.<br>
-                          The automated workflow involves <strong>machine learning pipelines</strong> to predict different
-                          plant chemical properties using <strong>support vector machine, random forest and
-                          partial least squares</strong> regression.<br>
-                          Solar-sensor zenith and azimuth angles are calcualted using open source Python packages
-                          (<strong>PVLIB, Rasterio, Geopandas</strong>), linear algebra (<strong>SciPy</strong>) and
-                          trigonometric functions.
+                            <ul>
+                                <li>
+                                    Hybridize deep neural networks and 
+                                    radiative transfer models 
+                                    (PROSAIL) to extract corn and 
+                                    sorghum phenotypes from UAV 
+                                    hyperspectral imageries.
+                                </li>
+                                <li>
+                                    Develop a Python-based automated 
+                                    tool that can extract imaging 
+                                    geometry from push-broom 
+                                    hyperspectral cameras. The outcome 
+                                    helps BRDF and RTM-based 
+                                    experiments in agricultural 
+                                    management.
+                                </li>
+                            </ul>
                         </p>
                         <!--a href="#">View Project</a-->
                     </div>
@@ -162,21 +171,40 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project3.jpg" />
+                        <img src="images/proj-terraref.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>TERRA-REF</h3>
                         <p>
-                          The <a href="https://terraref.org">project</a> transformed plant breeding by incorporating <strong>big data
-                          analytics, machine learning, and remote sensing</strong>. A large mechanical crane (Gantry Scanalyzer) with
-                          a handful number of sensors (<strong>hyperspectral, RGB, and thermal</strong>) continuously scans crops
-                          underneath it.<br>
-                          Developed a <strong>soil and shadow removal algorithm</strong> using physical rules of solar radiation and machine
-                          learning for the automated pipeline.<br>
-                          Trained a <strong>deep neural network</strong> to predict <strong>very near and short-wave infrared irradiance
-                          and reflectance</strong>.
+                            <ul>
+                                <li>
+                                    Created a SWIR-irradiance 
+                                    prediction model using 
+                                    feed-forward deep neural networks. 
+                                    The model improved the 
+                                    hyperspectral calibration of a 
+                                    gantry-based imaging platform.
+                                </li>
+                                <li>
+                                    Leveraged fractional derivatives 
+                                    and machine learning to estimate 
+                                    leaf chlorophyll concentration of 
+                                    sorghum.
+                                </li>
+                                <li>
+                                    Designed an unsupervised soil 
+                                    removal algorithm for 
+                                    high-resolution remote sensing 
+                                    images in crop breeding, which 
+                                    showed improved result compared 
+                                    to supervised learning methods.
+                                </li>
+                            </ul>
                         </p>
+                        <a href="https://www.mdpi.com/755306">Publication 1</a>
+                        <a href="https://ieeexplore.ieee.org/abstract/document/9486501">Publication 2</a>
+                        <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-3-2021/219/2021/">Publication 3</a>
                         <!--a href="#">View Project</a-->
                     </div>
                     <!-- End .project-info -->
