--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                 </li>
                             </ul>
                         </p>
-                        <a href="https://www.mdpi.com/755306">Publication 1</a>
+                        <a href="https://www.mdpi.com/755306">Publication 1</a><br>
                         <a href="https://ieeexplore.ieee.org/abstract/document/9486501">Publication 2</a>
                         <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-3-2021/219/2021/">Publication 3</a>
                         <!--a href="#">View Project</a-->
