updated project docs

--- a/index.html
+++ b/index.html
@@ -105,7 +105,101 @@
                 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project1.jpg" />
+                        <img src="images/proj-prosail.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>PROSAIL-Net: A Transfer Learning DNN for Corn Biophysical Traits</h3>
+                        <p>
+                            <ul>
+                                <li>
+                                    Hybridize deep neural networks and 
+                                    radiative transfer models 
+                                    (PROSAIL) to extract corn and 
+                                    sorghum phenotypes from UAV 
+                                    hyperspectral imageries.
+                                </li>
+                                <li>
+                                    Develop a Python-based automated 
+                                    tool that can extract imaging 
+                                    geometry from push-broom 
+                                    hyperspectral cameras. The outcome 
+                                    helps BRDF and RTM-based 
+                                    experiments in agricultural 
+                                    management.
+                                </li>
+                            </ul>
+                        </p>
+                        <a href="https://ui.adsabs.harvard.edu/abs/2022ISPAn..53..131B/abstract">Publication</a>
+                        <!--a href="#">View Project</a-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/proj-gdmyield.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>CNN-based Yield Prediction for Soybean Breeding Pipeline</h3>
+                        <p>
+                            <ul>
+                                <li>
+                                    Develop 2D and 3D variants of CNN
+                                    (AlexNet, VGG, ResNet, DenseNet) 
+                                    to predict yield from 
+                                    multi-dimensional UAV multispectral
+                                    images.
+                                </li>
+                                <li>
+                                    Create an automated pipeline that
+                                    takes UAV image as input and 
+                                    provides corresponding yield map 
+                                    as output.
+                                </li>
+                            </ul>
+                        </p>
+                        <!--a href="#">View Project</a-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/proj-sustain.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>SustaiN: A Decision Support System for In-season Nitrogen Prescription</h3>
+                        <p>
+                            <ul>
+                                <li>
+                                    Received $15K in funding from 
+                                    NCR-SARE as a graduate student. 20
+                                    projects among 60 were funded.
+                                </li>
+                                <li>
+                                    The goal is to develop an online
+                                    decision support system that can 
+                                    prescribe in-season Nitrogen 
+                                    requirement for corn farmers in 
+                                    Illinois and Missouri.
+                                </li>
+                            </ul>
+                        </p>
+                        <!--a href="#">View Project</a-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/proj-geoseed.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -136,38 +230,63 @@
                 </div>
                 <!-- End .project -->
 
+
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/proj-prosail.jpg" />
+                        <img src="images/proj-raster4ml.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>PROSAIL-Net: A Transfer Learning DNN for Corn Biophysical Traits</h3>
+                        <h3>Raster4ML</h3>
                         <p>
                             <ul>
                                 <li>
-                                    Hybridize deep neural networks and 
-                                    radiative transfer models 
-                                    (PROSAIL) to extract corn and 
-                                    sorghum phenotypes from UAV 
-                                    hyperspectral imageries.
+                                    The Python package can prepare 
+                                    machine learning ready datasets 
+                                    from shapefiles and remote sensing 
+                                    imageries.
                                 </li>
                                 <li>
-                                    Develop a Python-based automated 
-                                    tool that can extract imaging 
-                                    geometry from push-broom 
-                                    hyperspectral cameras. The outcome 
-                                    helps BRDF and RTM-based 
-                                    experiments in agricultural 
-                                    management.
+                                    Has functions to automatically 
+                                    calculate vegetation indices from 
+                                    images with fewer lines of code.
+                                </li>
+                                <li>
+                                    Tools to extract ground truth 
+                                    labels for semantic segmentation.
                                 </li>
                             </ul>
                         </p>
-                        <!--a href="#">View Project</a-->
+                        <a href="https://github.com/souravbhadra/raster4ml">GitHub</a-->
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/proj-maplapse.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Maplapse</h3>
+                        <p>
+                            <ul>
+                                <li>
+                                    The package seeks a shapefile as 
+                                    input and outputs an animated 
+                                    timelapse video along a temporal 
+                                    range.
+                                </li>
+                            </ul>
+                        </p>
+                        <a href="https://github.com/souravbhadra/maplapse">GitHub</a-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
 
                 <div class="project shadow-large">
                     <div class="project-image">
@@ -203,9 +322,8 @@
                             </ul>
                         </p>
                         <a href="https://www.mdpi.com/755306">Publication 1</a><br>
-                        <a href="https://ieeexplore.ieee.org/abstract/document/9486501">Publication 2</a>
+                        <a href="https://ieeexplore.ieee.org/abstract/document/9486501">Publication 2</a><br>
                         <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-3-2021/219/2021/">Publication 3</a>
-                        <!--a href="#">View Project</a-->
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -213,16 +331,33 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project4.jpg" />
+                        <img src="images/proj-hydro-ai.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Hydrologic Connectivity using AI</h3>
                         <p>
-                          The goal of this <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1951741&HistoricalAwards=false"> NSF funded project</a>
-    											was to improve the hydrologic connectivity from high-resolution digital elevation models (DEMs)
-											    using Convolutional Neural Networks (CNN) and Deep Neural Networks.
+                            <ul>
+                                <li>
+                                    Developed an automated pipeline to 
+                                    process hydrologic connectivity 
+                                    models in a High-performance 
+                                    computing (HPC) cluster, which 
+                                    significantly reduced the 
+                                    processing time for LiDAR-derived 
+                                    DEMs.
+                                </li>
+                                <li>
+                                    Created a CNN architecture to 
+                                    automatically identify 
+                                    bridges/culverts from 
+                                    LiDAR-derived DEMs and 
+                                    incorporated that information into 
+                                    hydrologic connectivity models.
+                                </li>
+                            </ul>
                         </p>
+                        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/tgis.12832">Publication</a>
                         <!--a href="#">View Project</a-->
                     </div>
                     <!-- End .project-info -->
