--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                         </strong> and <strong>urban modeling.</strong> 
                         <br>
                         <br>
-                        I <i class="ffas fa-heart"></i> <strong>Python
-                        , GIS </strong> and <strong>UAVs</strong>. 
+                        I love <strong>Python, GIS, plants </strong> 
+                        and <strong>UAVs</strong>. 
                         If there is remotely sensed images, geospatial 
                         data, and an ocean of questions, I am ready to
                         dive in...
@@ -257,7 +257,7 @@
                                 </li>
                             </ul>
                         </p>
-                        <a href="https://github.com/souravbhadra/raster4ml">GitHub</a-->
+                        <a href="https://github.com/souravbhadra/raster4ml">GitHub</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -281,7 +281,7 @@
                                 </li>
                             </ul>
                         </p>
-                        <a href="https://github.com/souravbhadra/maplapse">GitHub</a-->
+                        <a href="https://github.com/souravbhadra/maplapse">GitHub</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -323,7 +323,7 @@
                         </p>
                         <a href="https://www.mdpi.com/755306">Publication 1</a><br>
                         <a href="https://ieeexplore.ieee.org/abstract/document/9486501">Publication 2</a><br>
-                        <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-3-2021/219/2021/">Publication 3</a>
+                        <a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/V-3-2021/219/2021/">Publication 3</a><br>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -370,7 +370,7 @@
     <!-- End #projects -->
 
     <div id="education" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Education</h2>
         <div id="experience-timeline">
             <div data-date="Aug 2019 – May 2023">
                 <h3><b>PhD, Geoinformatics and Geospatial Analytics</b></h3>
