--- a/index.html
+++ b/index.html
@@ -399,6 +399,12 @@
         <h3>Peer Reviewed Articles</h3>
         <ul>
             <li>
+                (2022) <strong>Bhadra, S.</strong>, Sagan, V., Nguyen, C., Braud, M., Eveland, A.K., Mockler, T.C. 
+                “Automatic extraction of solar and sensor imaging geometry from UAV-borne push-broom hyperspectral 
+                camera.” ISPRS Annals of the Photogrammetry, Remote Sensing.
+                DOI: <a href="https://www.proquest.com/docview/2665359029?pq-origsite=gscholar&fromopenview=true">10.5194/isprs-annals-V-3-2022-131-2022</a>
+            </li>
+            <li>
                 (2022) Rahman, M., Morshed, M.M, <strong>Bhadra, S.</strong> “An integrated machine learning and remote
                 sensing approach for monitoring forest degradation due to Rohingya refugee influx in
                 Bangladesh.” Remote Sensing Applications: Society and Environment, 25, 1006976.
