updated about me

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </strong> and <strong>urban modeling.</strong> 
                         <br>
                         <br>
-                        I love <strong>Python, GIS, plants </strong> 
+                        I &#x1F466; <strong>Python, GIS, plants </strong> 
                         and <strong>UAVs</strong>. 
                         If there is remotely sensed images, geospatial 
                         data, and an ocean of questions, I am ready to
@@ -98,7 +98,7 @@
     <!-- End #about -->
 
 
-    <div id="projects">
+    <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
@@ -300,10 +300,7 @@
                                 <li>
                                     Created a SWIR-irradiance 
                                     prediction model using 
-                                    feed-forward deep neural networks. 
-                                    The model improved the 
-                                    hyperspectral calibration of a 
-                                    gantry-based imaging platform.
+                                    feed-forward deep neural networks.
                                 </li>
                                 <li>
                                     Leveraged fractional derivatives 
@@ -369,7 +366,7 @@
     </div>
     <!-- End #projects -->
 
-    <div id="education" class="background-alt">
+    <div id="education">
         <h2 class="heading">Education</h2>
         <div id="experience-timeline">
             <div data-date="Aug 2019 – May 2023">
@@ -539,9 +536,6 @@
                         </li>
                         <li>
                             <a href="https://linkedin.com/in/bhadrasourav/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.researchgate.net/profile/Sourav-Bhadra" target="_blank"><i class="fa fa-researchgate" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.facebook.com/sourav.bhadra/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
