--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                         </strong> and <strong>urban modeling.</strong> 
                         <br>
                         <br>
-                        I &#x1F466; <strong>Python, GIS, plants </strong> 
-                        and <strong>UAVs</strong>. 
+                        I &#x1F49C; <strong>Python &#x1F40D;, 
+                        GIS &#x1F30E;, plants &#x1F331;</strong> 
+                        and <strong>UAVs &#x1F681;</strong>. 
                         If there is remotely sensed images, geospatial 
                         data, and an ocean of questions, I am ready to
                         dive in...
@@ -191,7 +192,7 @@
                                 </li>
                             </ul>
                         </p>
-                        <!--a href="#">View Project</a-->
+                        <a href="https://projects.sare.org/sare_project/gnc22-343/">Project Link</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
