updated publication background

--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
 
     
 
-    <div id="publications" class="background-alt">
-    <!-- class="optional-section" -->
+    <div id="publications" class="optional-section">
+    <!-- class="optional-section" class="background-alt"-->
     <h2 class="heading">Publications</h2>
 
     <div class="optional-section-block">
