changed background colors

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <!-- End #lead -->
 
-    <div id="about">
+    <div id="about" class="background-alt">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -99,7 +99,7 @@
     <!-- End #about -->
 
 
-    <div id="projects" class="background-alt">
+    <div id="projects">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
@@ -367,7 +367,7 @@
     </div>
     <!-- End #projects -->
 
-    <div id="education">
+    <div id="education" class="background-alt">
         <h2 class="heading">Education</h2>
         <div id="experience-timeline">
             <div data-date="Aug 2019 – May 2023">
