--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Sensing | GIS | Computer Vision | UAV<br>
                 AgTech | Natural Resources | Urban Dynamics</h3>
             <a href="https://drive.google.com/file/d/198t2aGAjWTd6W3z1A4pbB9C7WLljGGe-/view?usp=sharing" class="btn-rounded-white">Download Resume</a>
-            <a href="https://drive.google.com/file/d/198t2aGAjWTd6W3z1A4pbB9C7WLljGGe-/view?usp=sharing" class="fa fa-times">LinkedIn</a>
+            <a href="https://drive.google.com/file/d/198t2aGAjWTd6W3z1A4pbB9C7WLljGGe-/view?usp=sharing"> <i class="fa fa-bars" ></i> </a>
         </div>
         <!-- End #lead-content -->
 
