--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Sensing | GIS | Computer Vision | UAV<br>
                 AgTech | Natural Resources | Urban Dynamics</h3>
             <a href="https://drive.google.com/file/d/198t2aGAjWTd6W3z1A4pbB9C7WLljGGe-/view?usp=sharing" class="btn-rounded-white">Download Resume</a>
-            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            <i class="fa linkedin" aria-hidden="true"></i>
         </div>
         <!-- End #lead-content -->
 
